fixed letter-spacing

--- a/scss/layout/_general.scss
+++ b/scss/layout/_general.scss
@@ -41,18 +41,15 @@
 .price-small {
   font-size: 0.8rem;
   font-weight: 400;
-
-  @include breakpoint(medium) {
-    letter-spacing: 0.05rem;
-  }
+  letter-spacing: 0.05rem;
 }
 
 .price-desc {
-  font-size: 0.9rem;
+  font-size: 1rem;
+  letter-spacing: 0.05rem;
 
   @include breakpoint(medium) {
     font-size: 1.05rem;
-    letter-spacing: 0.05rem;
   }
 }
 
