--- a/scss/styles.css
+++ b/scss/styles.css
@@ -201,20 +201,16 @@ picture {
 .price-small {
   font-size: 0.8rem;
   font-weight: 400;
-}
-@media (min-width: 42.75em) {
-  .price-small {
-    letter-spacing: 0.05rem;
-  }
+  letter-spacing: 0.05rem;
 }
 
 .price-desc {
-  font-size: 0.9rem;
+  font-size: 1rem;
+  letter-spacing: 0.05rem;
 }
 @media (min-width: 42.75em) {
   .price-desc {
     font-size: 1.05rem;
-    letter-spacing: 0.05rem;
   }
 }
 
@@ -796,7 +792,11 @@ sup {
   color: #fff;
   font-size: 1.1rem;
   font-weight: 400;
-  letter-spacing: 0.1rem;
+}
+@media (min-width: 29em) {
+  .product__middle__price--m2__p {
+    letter-spacing: 0.1rem;
+  }
 }
 @media (min-width: 42.75em) {
   .product__middle__price--m2__p {
